task-6: add/edit course

--- a/angular.json
+++ b/angular.json
@@ -96,6 +96,9 @@
             "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.spec.json",
             "karmaConfig": "karma.conf.js",
+            "codeCoverageExclude": [
+              "src/app/**/models/*.ts"
+            ],
             "assets": [
               "src/favicon.ico",
               "src/assets"
