--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "npm run generate:svg-sprite && ng serve",
-    "build": "npm run generate:svg-sprite && ng build",
+    "start": "npm run generate:svg-sprite && ng serve --aot",
+    "build": "npm run generate:svg-sprite && ng build --aot",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
