--- a/tsconfig.spec.json
+++ b/tsconfig.spec.json
@@ -5,7 +5,10 @@
     "types": [
       "jasmine",
       "node"
-    ]
+    ],
+    "paths": {
+      "@core/*": [ "src/app/core/*" ]
+    }
   },
   "files": [
     "src/test.ts",
