--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -2,7 +2,10 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "./out-tsc/app",
-    "types": []
+    "types": [],
+    "paths": {
+      "@core/*": [ "src/app/core/*" ]
+    }
   },
   "files": [
     "src/main.ts",
